# random_series

./: CMakeLists.txt
criterion/: CMakeLists.txt
criterion/main/: driver.cpp
criterion/src/: criterion.cpp  criterion.hpp  io_management.cpp
generator/: CMakeLists.txt
generator/main/: driver.cpp  generator.cpp  generator.hpp
generator/src/: L_generators.cpp  exp_generators.cpp  lehmer_32.cpp  librarian.cpp  rs_generator.hpp  wolfram.cpp
lfsr/: CMakeLists.txt
lfsr/src/: lfsr.hpp  lfsr_128.cpp  lfsr_32.cpp
